# python-postman

./: .env.example  .gitignore  LICENSE  README.md  coverage.json  pyproject.toml  simple_url_test.py  test_execution_summary.md  test_url_manual.py
.github/workflows/: python-publish.yml
collections/: EIA APIv2.postman_collection.json
docs/: README.md
docs/architecture/: execution-layer.md  layer-interaction.md  model-layer.md  overview.md
docs/examples/: description-usage.py  generate-documentation.py  parse-inspect-modify-execute.py  variable-introspection.py
docs/guides/: decision-tree.md  description-fields.md  optional-dependencies.md  troubleshooting.md  variable-scoping.md
examples/: README.md  advanced_execution.py  auth_resolution_example.py  authentication_examples.py  basic_execution.py  cftc_execution_example.py  complete_workflow.py  multi_collection_execution.py  path_parameters_example.py  request_convenience_methods.py  search_example.py  statistics_example.py  synchronous_execution.py  usage_patterns.py  variable_examples.py
examples/collections/: Coinmarketcap.postman_collection.json  PokeAPI.postman_collection.json
examples/models/: coinmarketcap_example.py  pokeapi_example.py
examples/projects/: README.md
examples/projects/microservices-testing/: README.md  main.py
examples/projects/microservices-testing/collections/: auth-service.json  order-service.json  user-service.json
examples/projects/microservices-testing/environments/: microservices.json
examples/projects/rest-api-testing/: README.md  main.py  requirements.txt
examples/projects/rest-api-testing/collections/: rest-api.json
examples/projects/rest-api-testing/environments/: dev.json  prod.json
examples/projects/rest-api-testing/tests/: test_rest_api.py
pypostman/: __main__.py  auth.py  body.py  collection.py  config.py  environment.py  event.py  item.py  postman.py  url.py  variable.py
pypostman/modules/: file.py  http.py  logger.py
pypostman/utils/: cli.py  load_dotenvc.py
python_postman/: __init__.py  parser.py
python_postman/exceptions/: __init__.py  base.py  file_error.py  parse_error.py  schema_error.py  validation_error.py
python_postman/execution/: __init__.py  auth_handler.py  context.py  exceptions.py  executor.py  extensions.py  response.py  results.py  script_runner.py  variable_resolver.py
python_postman/introspection/: __init__.py  auth_resolver.py  variable_tracer.py
python_postman/models/: __init__.py  auth.py  body.py  collection.py  collection_info.py  cookie.py  event.py  folder.py  header.py  item.py  request.py  response.py  schema.py  url.py  variable.py
python_postman/search/: __init__.py  query.py
python_postman/statistics/: __init__.py  collector.py
python_postman/types/: __init__.py  auth_types.py  http_methods.py
python_postman/utils/: __init__.py  json_parser.py  validators.py
src/python_postman/: __main__.py  body.py  collection.py  config.py  header.py  item.py  request.py  template.py  variable.py
src/python_postman/modules/: http.py
tests/: CollectionExample.postman_collection.json  CollectionTest.postman_collection.json  EIA APIv2.postman_collection.json  authvalues_test.py  collection_test.py  config_test.py  http_set_body_test.py  http_set_headers_test.py  http_set_params_test.py  http_set_url_test.py  test_auth.py  test_auth_handler.py  test_auth_resolver.py  test_body.py  test_collection.py  test_collection_info.py  test_cookie.py  test_description_fields.py  test_edge_cases.py  test_edge_cases.py.bak  test_edge_cases_summary.md  test_event.py  test_exceptions.py  test_execution_context.py  test_execution_exceptions.py  test_execution_integration.py  test_execution_reporter.py  test_executor.py  test_extensions.py  test_folder.py  test_header.py  test_http_set_headers.py  test_imports.py  test_integration.py  test_item.py  test_item_clarity.py  test_json_parser.py  test_parser.py  test_request.py  test_request_convenience.py  (+13 more)
tests/execution_tests/: CFTC_TEST_SUMMARY.md  INDEX.md  QUICK_START_CFTC.md  README_CFTC_TESTS.md  example_cftc_usage.py  test_cftc_comprehensive.py
tests/test_data/: README.md  README_integration_tests.md  auth_collection.json  auth_execution_collection.json  cftc.gov.postman_collection.json  empty_collection.json  error_scenarios_collection.json  events_collection.json  execution_collection.json  invalid_collection.json  malformed_json.json  nested_collection.json  nested_execution_collection.json  performance_collection.json  simple_collection.json
